css/style.css
/* ... */
.site-level-view .site-info-content .caption-container {font-weight: 400; font-size: 15px; line-height: 22px; margin: 10px 0 20px 20px; flex-basis: 30%; min-width: 200px;}
.site-level-view .site-info-title {display:flex; flex-direction:row; align-items: center;}
.site-level-view .site-info-title h4 {flex-grow: 0; font-size: 17px;}
.site-level-view .site-info-title hr {flex-grow:1; height: 1px; margin-left: 10px; background-color: #9f9f9f;}
.site-level-view .section-description {font-weight: 300; font-size: 15px; line-height: 22px; margin: 15px 15px;}
.site-level-view ul.site-data-carousel {margin: 25px 0; height: 198px; width: 100%; overflow-x: scroll; overflow-y: hidden; white-space:nowrap;}
.site-level-view ul.site-data-carousel li {display: inline-block; margin: 0 15px; width: 140px; vertical-align: top;}
.site-level-view ul.site-data-carousel li .data-carousel-header {height: 180px; overflow: hidden;}
.site-level-view ul.site-data-carousel li .data-carousel-header input {float: right; position: relative; top: 18px; right: 18px; transform: scale(1.5); z-index: 500;}
.site-level-view ul.site-data-carousel li .data-carousel-header label {display: inline-block;}
.site-level-view ul.site-data-carousel li .data-carousel-header div.minimap {width: 130px; height: 130px; border-radius: 25px; transition: 0.2s; display: block; margin: 5px 4.5%; text-align: center;}
.site-level-view ul.site-data-carousel li .data-carousel-header img:hover {box-shadow: 0px 0px 5px 0px #FFFFFF;;}
.site-level-view ul.site-data-carousel li .data-carousel-header p {display: block; margin: 7.5px auto; font-weight: 300; text-align: center;}
.site-level-view ul.site-data-carousel li .data-carousel-header .info-circle {position: relative; float: right; bottom: 35px; right: 3px; font-size: 12px; transition: .5s; cursor: pointer;}
.site-level-view ul.site-data-carousel li .data-carousel-header .info-circle:hover {transform: scale(1.2); color: orange;}
.site-level-view ul.site-data-carousel li .controls {margin: 0 10px;}
.site-level-view ul.site-data-carousel li .controls input {margin-left: 15px;}
.site-level-view ul.site-data-carousel li .controls label {margin-left: 7.5px; font-weight: 300; font-size: 14px}
.site-level-view ul.site-data-carousel li .controls select {display: block; margin: 0 auto; filter: invert(0.87); transform: scale(1.1);}

.site-level-view .site-info-section .carousel {height: 150px; margin: 20px 0 20px 20px; padding-bottom: 20px;}
.site-level-view .site-info-section .carousel-cell {height: 100%; width: 200px; margin: 0 4px;}
.site-level-view .site-info-section .flickity-prev-next-button {width: 30px; height: 30px;}
.site-level-view .carousel.is-fullscreen .carousel-cell {height: 100%;}

/* Map side */
.site-level-view .selector.map {position: absolute; bottom: 0; right: 0; float: right; margin: 25px 60px; padding: 0 25px; background-color: #515151; border-radius: 30px; box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75); z-index: 10;}
.site-level-view .selector.map ul li {display: inline-block; border-radius: 2px; width: 60px; height: 52px; vertical-align: top; text-align: center; margin: 0 1px; padding: 8px 0; font-size: 10px; transition: .3s}
.site-level-view .selector.map ul li:hover {background-color: grey;}
.site-level-view .selector.map ul li.active {background-color: orange;}
.site-level-view .selector.map ul li.active:hover {background-color: rgb(247, 219, 167);}
.site-level-view .selector.map ul li label i {font-size: 20px; padding-bottom: 5px;}
.site-level-view .selector.map ul li label {color: white; display: block;}
.site-level-view .selector.map ul li input {display: none;}
.site-level-view .selector.map li img.loading {display: none;}
.selector.map p.total {display: none;}

#regionswitcher {transform: scale(1.3); margin: 14px 62px 0 0;}

/* Style Mapbox components */
#styleswitcher {padding: 10px;}
#styleswitcher li {margin: 5.5px 0;}
#styleswitcher label {margin-left: 6px;}
#legend {background-color: #515151; color: #ffffff; padding: 15px; border-radius: 10px; opacity: 0.85; width: auto;}
.mapboxgl-ctrl.mapboxgl-ctrl-attrib {border-radius: 10px;}
.mapboxgl-ctrl.mapboxgl-ctrl-group:not(#legend, #regionswitcher) {filter: invert(0.75);}

/* Vex dialog boxes */
.vex.vex-theme-plain .vex-content {color: white; background-color: #323232;}
.vex.vex-theme-plain .vex-dialog-button-primary {background-color: orange;}


/* iOS style segmented control */
.ios-segmented-control {background: rgb(85, 85, 85); border-radius: 30px; margin: 10px; padding: 2px; border: none; outline: none; display: grid; grid-auto-flow: column; grid-auto-columns: 1fr; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);}
.ios-segmented-control .option {position: relative; cursor: pointer;}
.ios-segmented-control .option:hover input:not(:checked) + label span, .ios-segmented-control .option:active input:not(:checked) + label span, .ios-segmented-control .option:focus input:not(:checked) + label span {transform: scale(1.1);}
.ios-segmented-control .option:active input:not(:checked) + label span {transform: scale(.95);}  
.ios-segmented-control .option label {position: relative; display: block; text-align: center; padding: 3px 0vmin; background: rgba(255,255,255,0); font-weight: 500; color: white; font-size: 20px; height: 60px; line-height: 54px; text-overflow: clip; overflow: hidden;}  
.ios-segmented-control .option label::before, .ios-segmented-control .option label::after {content: ''; width: 1px; background: rgba(142,142,147,.15); position: absolute; top: 14%; bottom: 14%; will-change: background; -webkit-transition: background .3s ease; transition: background .3s ease;}  
.ios-segmented-control .option label::before {left: 0; transform: translateX(-.5px);}  
.ios-segmented-control .option label::after {right: 0; transform: translateX(.5px);}  
/* ... */

